--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
     "arraybuffer-loader": "^1.0.6",
     "atob": "2.1.2",
     "btoa": "1.2.1",
+    "cannon-es": "0.20.0",
     "canvas-toBlob": "1.0.0",
     "decode-html": "2.0.0",
     "diff-match-patch": "1.0.4",
+    "dompurify": "^3.0.9",
     "format-message": "6.2.1",
     "htmlparser2": "^3.10.0",
     "immutable": "3.8.2",
     "jszip": "^3.1.5",
+    "lz-string": "^1.5.0",
+    "mathjs": "^11.11.1",
     "mersenne-twister": "^1.1.0",
     "minilog": "3.1.0",
     "pathfinding": "^0.4.18",
+    "schema-utils": "^2.7.1",
     "scratch-parser": "git+https://github.com/PenguinMod/PenguinMod-Parser.git#master",
     "scratch-sb1-converter": "0.2.7",
     "scratch-translate-extension-languages": "0.0.20191118205314",
@@ -51,11 +56,8 @@
     "text-encoding": "0.7.0",
     "three": "0.153.0",
     "three-mesh-bvh": "0.6.0",
-    "cannon-es": "0.20.0",
     "tone": "^14.7.77",
-    "mathjs": "^11.11.1",
-    "worker-loader": "^1.1.1",
-    "lz-string": "^1.5.0"
+    "worker-loader": "^1.1.1"
   },
   "peerDependencies": {
     "scratch-svg-renderer": "^0.2.0-prerelease"
@@ -85,7 +87,7 @@
     "scratch-blocks": "git+https://github.com/PenguinMod/PenguinMod-Blocks.git#develop-builds",
     "scratch-l10n": "3.14.20220526031602",
     "scratch-render": "0.1.0-prerelease.20211028200436",
-    "scratch-render-fonts": "1.0.0-prerelease.20210401210003",
+    "scratch-render-fonts": "github:PenguinMod/penguinmod-render-fonts#master",
     "scratch-storage": "git+https://github.com/PenguinMod/PenguinMod-Storage.git#develop",
     "scratch-svg-renderer": "0.2.0-prerelease.20210727023023",
     "script-loader": "0.7.2",
